--- a/NormallyExplorePitch.Rmd
+++ b/NormallyExplorePitch.Rmd
@@ -54,9 +54,11 @@ require(ggplot2)
 distr.df<-data.frame(X=c(rnorm(100,2,1),rnorm(66,-1,1.5),rnorm(100,0,1.25),rnorm(50,2,1.25)),
                      Y=c(rnorm(100,1,1),rnorm(66,2.5,1),rnorm(100,-2,1.5),rnorm(50,5,1.75)),
                      d=c(rep("1",100),rep("2",66),rep("3",100),rep("4",50)))
-kmc<-kmeans(distr.df[,1:2],4,20)$centers
+centers<-kmeans(distr.df[,1:2],4,20)$centers
+kmc<-data.frame(X=centers[,1],Y=centers[,2],d=c("1","2","3","4"))
 g<-ggplot(distr.df,aes(X,Y,color=d))+geom_point(size=2.5,alpha=0.6)+xlim(-10,10)+ylim(-10,10)+
-          theme(legend.position='none')+annotate('text',kmc[,1],kmc[,2],label=c("@","@","@","@"))
+          theme(legend.position='none')+
+          geom_point(data=kmc,aes(X,Y),shape=3,color='black',size=4,alpha=1)
 ggplotly(g)
 ```
 
